--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thesprucepets.com%2Fchinese-dog-breeds-4797219&psig=AOvVaw1yiCG-7JU-nt-_vIK1RCnF&ust=1673799196545000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCIDUwMK5x_wCFQAAAAAdAAAAABAF" alt="A cute dog">
 </body>
 
 </html>
